# fine-tuning-from-db

./: .gitignore  EOT-REST-API.md  EOT-예측-첫-토큰.md  IMPLEMENTATION-HOW-TO.md  LICENSE  MANIFEST.in  PROPOSAL.md  QUICKSTART.md  README.md  REST-API.md  analyze_users.py  check_db.py  eot_api.py  eot_frontend.html  eot_predictor.py  main.py  pyproject.toml  requirements.txt  run_api.py  setup.py  test_eot_api.py  user-defined-eots.txt  한국어-상용구-첫-토큰.md  한국어-상용구.md
api/: __init__.py  dependencies.py  main.py
api/middleware/: __init__.py  auth.py
api/routes/: __init__.py  cache.py  health.py  models.py  predict.py
api/schemas/: __init__.py  request.py  response.py
examples/: input.txt
korean_predictor/: __init__.py  cli.py
korean_predictor/cache/: __init__.py  cache.py  cache_service.py
korean_predictor/models/: __init__.py  model_manager.py  predictor.py
korean_predictor/utils/: config.py
web/: index.html
web/css/: style.css
web/js/: api.js  app.js
