[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-predictor"
version = "1.0.0"
description = "한국어 다음 토큰 예측 및 End-of-Turn 확률 분석 CLI 도구"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["korean", "nlp", "token-prediction", "end-of-turn", "language-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "tokenizers>=0.15.0",
    "packaging>=20.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.41",
    "numpy>=1.24.0",
    "diskcache>=5.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
]

[project.scripts]
korean-predictor = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/korean-predictor"
Repository = "https://github.com/yourusername/korean-predictor"
Issues = "https://github.com/yourusername/korean-predictor/issues"

[tool.setuptools]
packages = ["korean_predictor", "korean_predictor.models", "korean_predictor.cache", "korean_predictor.utils", "korean_predictor.cli"]

[tool.setuptools.package-data]
korean_predictor = ["*.txt", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
